css/layout.css
.nav {
    margin-left:64px;
}

.wrapper{
    max-width: 1000px;
    margin: 0 auto;
}

.mainContent{
    margin-top: 5vh;
    display: flex;
    justify-content: space-between;
}
.hiddenContent{
    text-transform: none;
}

.textContentContainer {
    width:65%;
}


@media only screen and (max-width: 800px){
    .mainContent{
        flex-direction: column;
        align-items:center;


        text-align: center;
    }

    .nav {
        margin: auto;
        margin-bottom: 64px;
        width: 100%;
    }

    .typed-name{
        width: 100%;

    }

    .textContentContainer {
       width: 100%;
        line-height: 1em;
    }
}

